--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "antd": "^5.25.4",
+    "classnames": "^2.5.1",
     "eventemitter3": "^5.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
